<resources>
    <string name="app_name">EntertainmentApp</string>
    <string name="huma_anwar">HiSkyTech It Company</string>
    <string name="huma01122_gmail_com">Email or Phone Number</string>
    <string name="pswrd">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Full Name</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="sign_in">Sign in</string>
    <string name="login">Login</string>
    <string name="track_selection_title">Video Quality</string>

</resources>