<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signin_bg"
    tools:context=".Ui.ActivitySignUp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:id="@+id/ivBackArrow"
            android:src="@drawable/baseline_arrow_back_ios_24"
            android:layout_margin="10dp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="100dp"
        android:id="@+id/img"
        android:src="@drawable/profile"

        app:civ_border_width="2dp"
        app:civ_border_color="#FDFDFD"
        android:layout_gravity="center_horizontal"
        android:layout_height="100dp"/>

<!--
<androidx.cardview.widget.CardView
    android:layout_width="150dp"
    android:layout_height="150dp"
    android:elevation="20dp"
    android:layout_gravity="center_horizontal"
    app:cardBackgroundColor="@color/Tertiary2"
    app:cardCornerRadius="75dp">
    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/profile"/>
</androidx.cardview.widget.CardView>-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
                android:text="Select Image"
            android:id="@+id/selectimage"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:textSize="17sp"
                android:fontFamily="@font/outfit_extralight"/>
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_marginTop="12dp"
    android:textColor="@color/white"
        android:fontFamily="@font/outfit_extralight"/>
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="9dp"
         android:orientation="horizontal">
         <androidx.cardview.widget.CardView
             android:layout_width="40dp"
             android:layout_height="40dp"
android:layout_marginEnd="-10dp"
             android:layout_gravity="center"
             android:layout_marginStart="10dp"
                 app:cardCornerRadius="50dp">
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
                 android:src="@drawable/baseline_email_24"
                 android:layout_gravity="center"/>

         </androidx.cardview.widget.CardView>
         <EditText
             android:layout_width="match_parent"
             android:layout_height="47dp"
                 android:background="@drawable/et_bg"
                 android:hint="HiSkyTech It Comapny"
             android:id="@+id/etname"
             android:textColor="@color/white"
             android:textColorHighlight="@color/white"
                 android:textColorHint="@color/white"
                 android:fontFamily="@font/outfit_light"
               android:paddingStart="25dp"/>
 </LinearLayout>
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
        android:text="Email or Phone No"
        android:layout_marginTop="12dp"
    android:textColor="@color/white"
        android:fontFamily="@font/outfit_extralight"/>
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="9dp"
         android:orientation="horizontal">
         <androidx.cardview.widget.CardView
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginEnd="-10dp"
             android:layout_gravity="center"
             android:layout_marginStart="10dp"
                 app:cardCornerRadius="50dp">
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
                 android:src="@drawable/baseline_email_24"
                 android:layout_gravity="center"/>

         </androidx.cardview.widget.CardView>
         <EditText
             android:layout_width="match_parent"
             android:layout_height="47dp"
             android:id="@+id/etEmail"
             android:background="@drawable/et_bg"
                 android:hint="03186362759"

             android:textColor="@color/white"
             android:textColorHighlight="@color/white"
             android:textColorHint="@color/white"
                 android:fontFamily="@font/outfit_light"
               android:paddingStart="25dp"/>
 </LinearLayout><TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
        android:text="Password"
        android:layout_marginTop="12dp"
    android:textColor="@color/white"
    android:textColorHighlight="@color/white"
    android:textColorHint="@color/white"
    android:fontFamily="@font/outfit_light"/>
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="9dp"
         android:orientation="horizontal">
         <androidx.cardview.widget.CardView
             android:layout_width="40dp"
             android:layout_height="40dp"

             android:layout_marginEnd="-10dp"
             android:layout_gravity="center"
             android:layout_marginStart="10dp"
                 app:cardCornerRadius="50dp">
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
                 android:src="@drawable/baseline_key_24"
                 android:layout_gravity="center"/>

         </androidx.cardview.widget.CardView>
         <EditText
             android:layout_width="match_parent"
             android:layout_height="47dp"
             android:background="@drawable/et_bg"
              android:inputType="textPassword"
                 android:hint="@string/pswrd"
             android:id="@+id/etpassword"
             android:textColor="@color/white"
             android:textColorHighlight="@color/white"
             android:textColorHint="@color/white"
             android:fontFamily="@font/outfit_light"
               android:paddingStart="25dp"/>
 </LinearLayout>
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:layout_marginTop="12dp"
    android:textColor="@color/white"
        android:fontFamily="@font/outfit_extralight"/>
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="9dp"
         android:orientation="horizontal">
         <androidx.cardview.widget.CardView
             android:layout_width="40dp"
             android:layout_height="40dp"

             android:layout_marginEnd="-10dp"
             android:layout_gravity="center"
             android:layout_marginStart="10dp"
                 app:cardCornerRadius="50dp">
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
                 android:src="@drawable/baseline_key_24"
                 android:layout_gravity="center"/>

         </androidx.cardview.widget.CardView>
         <EditText
             android:layout_width="match_parent"
             android:layout_height="47dp"
             android:background="@drawable/et_bg"
             android:inputType="textPassword"
             android:gravity="center_vertical"
             android:id="@+id/etCPassword"
             android:hint="@string/confirm_password"

             android:textColor="@color/white"
             android:textColorHighlight="@color/white"
             android:textColorHint="@color/white"
                 android:fontFamily="@font/outfit_light"
               android:paddingLeft="25dp"/>
 </LinearLayout>
   <androidx.appcompat.widget.AppCompatButton
       android:layout_width="match_parent"
       android:layout_height="40dp"
     android:background="@drawable/sign_btn"
       android:layout_gravity="center"
       android:id="@+id/btnSignUp"
       android:layout_marginTop="25dp"
       android:layout_marginHorizontal="60dp"
       android:fontFamily=""
       android:text="@string/create_account"/>
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="40dp"

         android:orientation="horizontal">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
             android:text="@string/already_have_an_account"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="10dp"
             android:id="@+id/btnSIgnIn"
             android:textColor="@color/Primary1"
             android:text="@string/sign_in"/>
     </LinearLayout>
</LinearLayout>

</ScrollView>
