<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="19dp"
        android:background="@drawable/signin_bg"
        tools:context=".Ui.ActivityLogin">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:src="@drawable/baseline_arrow_back_ios_24"
            android:layout_marginTop="10dp"/>

        <ImageView
            android:layout_width="200dp"
            android:layout_height="110dp"
            android:src="@drawable/logoimg"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:textSize="23sp"
            android:fontFamily="@font/outfit_bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            android:fontFamily="@font/outfit_extralight"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:layout_width="40dp"
                android:layout_height="40dp"

                android:layout_marginStart="10dp"
                app:cardCornerRadius="50dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_email_24"
                    android:layout_gravity="center"/>

            </androidx.cardview.widget.CardView>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edittext"
                android:hint="@string/huma01122_gmail_com"
                android:textColorHint="@color/white"
                android:fontFamily="@font/outfit_medium"
                android:paddingStart="20dp"/>
        </LinearLayout><TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Password"
        android:layout_marginTop="12dp"
        android:textColor="@color/white"
        android:fontFamily="@font/outfit_extralight"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:layout_width="40dp"
                android:layout_height="40dp"

                android:layout_marginStart="10dp"
                app:cardCornerRadius="50dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_key_24"
                    android:layout_gravity="center"/>

            </androidx.cardview.widget.CardView>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edittext"
                android:inputType="textPassword"
                android:hint="@string/pswrd"
                android:textColorHint="@color/white"
                android:fontFamily="@font/outfit_medium"
                android:paddingStart="20dp"/>
        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Primary1"
            android:layout_marginTop="20dp"
            android:fontFamily=""
            android:text="Sign In"
            android:layout_gravity="center_horizontal"
            app:cornerRadius="10dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="Don't Have An Account?"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/Primary1"
                android:text=" Sign Up"/>
        </LinearLayout>
</LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot?"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:fontFamily="@font/outfit_light"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:textSize="16sp"
        android:textColor="@color/Primary1" />

    </RelativeLayout>
